src/test/resources/AttributeCheck/positive/LanguageSpecification4.ls
class A {

  p ("${b : B}") {
    b.a = 13;
  }

}

class B {

  inh a : int;

  b ("") {}

}
